--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -30,7 +30,7 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Terraform init
         run: echo "OK"
 
@@ -79,5 +79,7 @@ jobs:
     - terraform-plan
 
     steps:
+      - name: Verifica Cluster
+        run: kind delete cluster
       - name: Se Despliega la Infraestructura
         run: kind create cluster --config kind-multi-node.yaml
